--- a/Makefile.in
+++ b/Makefile.in
@@ -14,7 +14,7 @@
 
 @SET_MAKE@
 
-# File: Makefile.am, author: John Sauter, date: March 23, 2025.
+# File: Makefile.am, author: John Sauter, date: March 30, 2025.
 #
 # Build traffic_control_signals.pdf and animations.
 
@@ -570,6 +570,7 @@ man_walking_right.png \
 *_animation.csv \
 *_animation.mkv \
 *_animation.pdf \
+last_event_time_*_animation.txt \
 check_output.txt \
 verify_files.sh \
 *trace.txt 
@@ -1297,7 +1298,8 @@ check_output.txt : traffic_control_signals.py left_turn_script.txt
 # object is located with the passage of time.
 %_animation.csv : %_script.txt traffic_control_signals.py
 	python3 ${srcdir}/traffic_control_signals.py \
---script "${srcdir}/$<" --duration 1200 --events-file "$@" 
+--script "${srcdir}/$<" --duration 600 --events-file "$@" \
+--last-event-time "last_event_time_$(*F)_animation.txt"
 
 # Render the animation as individual images.  We use the PDF file
 # as a marker to day that the frames have been generated.
@@ -1340,7 +1342,8 @@ MUTCD_Ped_Signal_-_Steady_hand.png MUTCD_Ped_Signal_-_Walk.png \
 background.png car-38800411-right.png \
 car-38800411-up.png truck-51893967-up.png truck-51893967-right.png \
 man_walking_right.png
-	bash build_animation.sh "$<" "animation_$(*F)_temp"
+	bash build_animation.sh "$<" \
+"last_event_time_$(*F)_animation.txt" "animation_$(*F)_temp"
 	img2pdf --output "$@" animation_$(*F)_temp/frame_*.png
 
 %_animation.mkv : %_animation.pdf
