--- a/Makefile.in
+++ b/Makefile.in
@@ -14,7 +14,7 @@
 
 @SET_MAKE@
 
-# File: Makefile.am, author: John Sauter, date: July 6, 2025.
+# File: Makefile.am, author: John Sauter, date: July 19, 2025.
 #
 # Build traffic_control_signals.pdf and animations.
 
@@ -527,7 +527,7 @@ EXTRA_DIST = signal_ccc.svg signal_ccu.svg signal_rrr.svg \
 	references.bib Signal_Timing_Manual_Second_Edition_22097.pdf \
 	define_traffic_control_signals.py \
 	display_traffic_control_signals.py define_intersection.py \
-	display_intersection.py run_simulation.py \
+	display_intersection.py simulate_traffic.py draw_background.py \
 	traffic_control_signals.tex state_diagram.txt \
 	signal_ccc_Green.svg signal_ccc_Red.svg signal_ccc_Yellow.svg \
 	signal_ccu_Green.svg signal_ccu_Red.svg signal_ccu_Yellow.svg \
@@ -581,6 +581,7 @@ truck-51893967-right.png \
 truck-51893967-up.png \
 pedestrian.png \
 man_walking_right.png \
+background.png \
 *_table.tex \
 *_animation.csv \
 *_animation.mkv \
@@ -1296,47 +1297,48 @@ sensor_map.tex : display_intersection.py intersection.json
 
 # Generate the table files which detail the operation of the
 # finite state machines
-idle_table.tex : run_simulation.py intersection.json
-	python3 ${srcdir}/run_simulation.py \
---input ${builddir}/intersection.json \
+idle_table.tex : simulate_traffic.py intersection.json
+	python3 ${srcdir}/simulate_traffic.py \
+--intersection ${builddir}/intersection.json \
 --table-level 4 --table-file ${builddir}/idle_table.tex --duration 200  \
 --table-caption "Power On to Idle State"
 
-left_turn_table.tex : run_simulation.py intersection.json left_turn_script.txt
-	python3 ${srcdir}/run_simulation.py \
---input=${builddir}/intersection.json \
+left_turn_table.tex : simulate_traffic.py intersection.json \
+left_turn_script.txt
+	python3 ${srcdir}/simulate_traffic.py \
+--intersection ${builddir}/intersection.json \
 --table-level 4 --table-file ${builddir}/left_turn_table.tex --duration 400 \
 --table-start 199 --script ${srcdir}/left_turn_script.txt \
 --table-caption "Left Turn"
 
-left_turn_delayed_table.tex : run_simulation.py intersection.json  \
+left_turn_delayed_table.tex : simulate_traffic.py intersection.json  \
 left_turn_delayed_script.txt
-	python3 ${srcdir}/run_simulation.py \
---input=${builddir}/intersection.json \
+	python3 ${srcdir}/simulate_traffic.py \
+--intersection ${builddir}/intersection.json \
 --table-level 4 --table-file ${builddir}/left_turn_delayed_table.tex \
 --duration 400 --table-start 199 \
 --script ${srcdir}/left_turn_delayed_script.txt \
 --table-caption "Left Turn Delayed"
 
-pedestrian_table.tex : run_simulation.py intersection.json \
+pedestrian_table.tex : simulate_traffic.py intersection.json \
 pedestrian_script.txt
-	python3 ${srcdir}/run_simulation.py \
---input ${builddir}/intersection.json --table-level 3 \
+	python3 ${srcdir}/simulate_traffic.py \
+--intersection ${builddir}/intersection.json --table-level 3 \
 --table-file ${builddir}/pedestrian_table.tex --duration 400 \
 --table-start 199 --script ${srcdir}/pedestrian_script.txt \
 --table-caption "Pedestrian Crosses"
 
-pedestrian_and_left_turn_table.tex : run_simulation.py intersection.json \
+pedestrian_and_left_turn_table.tex : simulate_traffic.py intersection.json \
 pedestrian_and_left_turn_script.txt
-	python3 ${srcdir}/run_simulation.py \
---input=${builddir}/intersection.json --table-level 3 \
+	python3 ${srcdir}/simulate_traffic.py \
+--intersection ${builddir}/intersection.json --table-level 3 \
 --table-file ${builddir}/pedestrian_and_left_turn_table.tex --duration 400 \
 --table-start 199 --script ${srcdir}/pedestrian_and_left_turn_script.txt \
 --table-caption "Pedestrian then Left Turn"
 
-multiple_table.tex : run_simulation.py intersection.json multiple_script.txt
-	python3 ${srcdir}/run_simulation.py \
---input=${builddir}/intersection.json \
+multiple_table.tex : simulate_traffic.py intersection.json multiple_script.txt
+	python3 ${srcdir}/simulate_traffic.py \
+--intersection ${builddir}/intersection.json \
 --table-level 2 \
 --table-file ${builddir}/multiple_table.tex --duration 400 --table-start 199 \
 --script ${srcdir}/multiple_script.txt --table-caption "Many Events"
@@ -1347,8 +1349,8 @@ multiple_table.tex : run_simulation.py intersection.json multiple_script.txt
 %.pdf : %.svg ; inkscape --export-type=pdf --export-dpi=4800 \
 ${srcdir}/$(<F) -o ${builddir}/$(@F)
 
-%.png : %.svg ; inkscape --export-type=png --export-dpi=4800 \
-${srcdir}/$(<F) -o ${builddir}/$(@F)
+%.png : %.svg ; inkscape --export-type=png --export-png-color-mode=RGBA_16 \
+--export-dpi=4800 ${srcdir}/$(<F) -o ${builddir}/$(@F)
 
 # Buld the PDF on demand, if requested.
 pdf-local: traffic_control_signals.pdf
@@ -1367,23 +1369,30 @@ verify_files.sh : verify_files_template.sh check_output.txt
 	if [ ! -r "check_expected_output.txt" ] ; then cp $(srcdir)/check_expected_output.txt check_expected_output.txt ; touch copied_from_srcdir ; fi
 	chmod +x verify_files.sh
 
-check_output.txt : run_simulation.py intersection.json left_turn_script.txt
-	python3 ${srcdir}/run_simulation.py \
---input ${builddir}/intersection.json \
+check_output.txt : simulate_traffic.py intersection.json left_turn_script.txt
+	python3 ${srcdir}/simulate_traffic.py \
+--intersection ${builddir}/intersection.json \
 --script ${srcdir}/left_turn_script.txt \
 --duration 1200 --verbose 2 | tee ${builddir}/check_output.txt
 
 # Animations illustrate a scenario.  This csv file describes where each
 # object is located with the passage of time.
-%_animation.csv : %_script.txt run_simulation.py intersection.json
-	python3 ${srcdir}/run_simulation.py \
---input=${builddir}/intersection.json \
+%_animation.csv : %_script.txt simulate_traffic.py intersection.json
+	python3 ${srcdir}/simulate_traffic.py \
+--intersection ${builddir}/intersection.json \
 --script "${srcdir}/$<" --duration 1200 --events-file "$@" \
---last-event-time "last_event_time_$(*F)_animation.txt"
+--last-event-time "${builddir}/last_event_time_$(*F)_animation.txt"
+
+# Create the background image for the animation.
+background.png : draw_background.py intersection.json
+	python3 ${srcdir}/draw_background.py \
+--intersection ${builddir}/intersection.json \
+--background ${builddir}/background.png
 
 # Render the animation as individual images.  We use the PDF file
 # as a marker to say that the frames have been generated.
 %_animation.pdf : %_animation.csv \
+background.png \
 process_events.py build_animation.sh render_animation.sh \
 signal_ccc_Green.png signal_ccc_Red.png \
 signal_ccc_Yellow.png signal_ccu_Green.png signal_ccu_Red.png \
@@ -1423,11 +1432,12 @@ background.png car-38800411-right.png \
 car-38800411-up.png truck-51893967-up.png truck-51893967-right.png \
 man_walking_right.png
 	bash build_animation.sh "$<" \
-"last_event_time_$(*F)_animation.txt" "animation_$(*F)_temp"
-	img2pdf --output "$@" animation_$(*F)_temp/frame_*.png
+"last_event_time_$(*F)_animation.txt" "animation_$(*F)_temp" \
+"${builddir}/intersection.json" "${builddir}/background.png"
+	touch "$@"
 
 %_animation.mkv : %_animation.pdf
-	bash build_video.sh "$@" "animation_$(*F)_temp"
+	bash build_video.sh "$@" "${builddir}/animation_$(*F)_temp"
 
 clean-local: clean-local-check
 .PHONEY: clean-local-check
